--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,15 +1,11 @@
 {{- if not (.Param "hideFooter") }}
 <footer class="footer">
-    {{- if site.Copyright }}
-    <span>{{ site.Copyright | markdownify }}</span>
-    {{- else }}
-    <span>&copy; {{ now.Year }} <a href="{{ "" | absLangURL }}">{{ site.Title }}</a></span>
-    {{- end }}
-    <span>
-        Powered by
+    <p>Copyright &copy; 2023 - {{ now.Year }} | All rights reserved</p>
+    <p>&lt;/&gt; with ❤️ and ☕ by Dimitris Chatzis</p>
+    <p>Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
         <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
-    </span>
+    </p>
 </footer>
 {{- end }}
 
