Add Google Analytics tracking code and edit post link

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1,3 +1,11 @@
+::-moz-selection {
+    background: var(--tertiary);
+}
+
+::selection {
+    background: var(--tertiary);
+}
+
 .logo a::after {
     content: "";
     position: relative;
