--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,11 +1,7 @@
 {{- if not (.Param "hideFooter") }}
 <footer class="footer">
-    <p>Copyright &copy; 2023 - {{ now.Year }} | All rights reserved</p>
+    <p>Copyright &copy; {{ now.Year }} | All rights reserved</p>
     <p>&lt;/&gt; with ❤️ and ☕ by Dimitris Chatzis</p>
-    <p>Powered by
-        <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
-        <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
-    </p>
 </footer>
 {{- end }}
 
