Update social icons

--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -14,7 +14,7 @@
     if (email) {
         email.addEventListener("click", function (e) {
             e.preventDefault();
-            window.location.href = atob(this.getAttribute("href"));
+            window.location.href = atob("bWFpbHRvOmRodHpzMjAwMUBob3RtYWlsLmNvbQ==");
         });
     }
 </script>
