--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -10,6 +10,10 @@ html, body {
     background: var(--tertiary);
 }
 
+.social-icons a {
+    padding: 5px;
+}
+
 .logo a::after {
     content: "";
     position: relative;
