--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -53,3 +53,10 @@ html, body {
         opacity: 0.0;
     }
 }
+
+.footer svg {
+    vertical-align: sub;
+    width: 14px;
+	height: 14px;
+    margin: auto 1px;
+}
