--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -95,6 +95,16 @@
                     </svg>
                 </button>
                 {{- end }}
+                {{- if (ne .Layout "search") }}
+                <a href="{{ `search` | absLangURL }}" id="search-toggle" accesskey="s" title="(Alt + S)">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
+                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <circle cx="11" cy="11" r="8"></circle>
+                        <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                    </svg>
+                </a>
+                {{- end }}
 
                 {{- $lang := .Lang}}
                 {{- $separator := or $label_text (not site.Params.disableThemeToggle)}}
