--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -74,7 +74,7 @@
             {{- end }}
             <div class="logo-switches">
                 {{- if (not site.Params.disableThemeToggle) }}
-                <button id="theme-toggle" accesskey="t" title="(Alt + T)">
+                <button id="theme-toggle" accesskey="t" title="Toggle theme (Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                         stroke-linejoin="round">
@@ -95,16 +95,15 @@
                     </svg>
                 </button>
                 {{- end }}
-                {{- if (ne .Layout "search") }}
-                <a href="{{ `search` | absLangURL }}" id="search-toggle" accesskey="s" title="(Alt + S)">
+                {{- $is_search := eq .Layout `search` }}
+                <a href="{{ `search` | absLangURL }}" id="search-toggle" {{ if $is_search }}class="active"{{ else }}accesskey="/" title="Search (Alt + /)"{{ end }}>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
-                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        fill="none" stroke="currentColor" stroke-width="{{ if $is_search }}4{{ else }}2{{ end }}" stroke-linecap="round"
                         stroke-linejoin="round">
                         <circle cx="11" cy="11" r="8"></circle>
                         <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
                     </svg>
                 </a>
-                {{- end }}
 
                 {{- $lang := .Lang}}
                 {{- $separator := or $label_text (not site.Params.disableThemeToggle)}}
