--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,5 +1,17 @@
 
-{{ $sw := resources.Get "sw.js" | js.Build (dict "params" (dict "md5Hash" (now.UnixNano | md5))) | resources.Minify }}
+{{ $cacheStorageHash := now.UnixNano | md5 -}}
+{{- $extraAssetsToCache := dict -}}
+{{- $idx := 0 }}
+{{- range $section := site.Params.mainSections }}
+    {{- range $val := seq (math.Ceil (div (float (len (where $.Site.RegularPages "Section" $section))) (float 5))) -}}
+        {{- $extraAssetsToCache = $extraAssetsToCache | merge (dict (string $idx) (printf "/%s/page/%s/" $section (string $val))) -}}
+        {{- $idx = add $idx 1 }}
+    {{- end -}}
+{{- end -}}
+{{ $sw := resources.Get "sw.js" | js.Build (dict "params" (dict
+    "cacheStorageHash" $cacheStorageHash
+    "extraAssetsToCache" $extraAssetsToCache
+)) | resources.Minify }}
 <script>
     if ("serviceWorker" in navigator) {
         navigator.serviceWorker.register("{{ $sw.RelPermalink }}", {
@@ -20,3 +32,57 @@
     }
 </script>
 {{- end }}
+{{- if and .IsPage (not .IsHome) (not (.Param "hideMeta")) }}
+<script>
+    var postControls = document.querySelector(".post-controls");
+    if (postControls) {
+        if ("serviceWorker" in navigator && "caches" in window) {
+            postControls.innerHTML += '<div id="control-offline"></div>';
+            var offlineControl = document.querySelector(".post-controls #control-offline");
+
+            function checkIfCached () {
+                return caches.open("offline").then(function (cache) {
+                    return cache.match(location.pathname).then(function (match) {
+                        return !!match;
+                    });
+                });
+            }
+
+            function addToCache () {
+                return caches.open("offline").then(function (cache) {
+                    cache.add(location.pathname);
+                });
+            }
+
+            function removeFromCache () {
+                return caches.open("offline").then(function (cache) {
+                    cache.delete(location.pathname);
+                });
+            }
+
+            function updateOfflineControl (isCached) {
+                if (!isCached) {
+                    offlineControl.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>&nbsp;Save for offline reading';
+                    offlineControl.className = "not-chached";
+                } else {
+                    offlineControl.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="3 6 5 6 21 6"/><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/><line x1="10" y1="11" x2="10" y2="17"/><line x1="14" y1="11" x2="14" y2="17"/></svg>&nbsp;Remove from offline reading';
+                    offlineControl.className = "cached";
+                }
+            }
+
+            checkIfCached().then(function (isCached) {
+                updateOfflineControl(isCached);
+            });
+            offlineControl.addEventListener("click", function () {
+                checkIfCached().then(function (isCached) {
+                    if (!isCached) {
+                        addToCache().then(updateOfflineControl(true));
+                    } else {
+                        removeFromCache().then(updateOfflineControl(false));
+                    }
+                });
+            });
+        }
+    }
+</script>
+{{- end}}
