--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -57,7 +57,7 @@
                 }
             }
         }
-        xhr.open("GET", "/ping?v" + Date.now(), true);
+        xhr.open("GET", window.location.href + "?v=" + Date.now(), true);
         xhr.send();
     }
 </script>
@@ -145,4 +145,4 @@
         }
     }
 </script>
-{{- end}}
+{{- end -}}
