--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -71,6 +71,9 @@
             document.body.classList.add("dark");
             localStorage.setItem("pref-theme", "dark");
         }
+        if (activityChart !== undefined) {
+            activityChart.update();
+        }
     });
 </script>
 {{- end }}
