--- a/layouts/shortcodes/activityChart.html
+++ b/layouts/shortcodes/activityChart.html
@@ -47,7 +47,7 @@
                 plugins: {
                     title: {
                         display: true,
-                        text: `Last activity update: ${new Date(data["last_upload"]).toUTCString()}`,
+                        text: `Last update: ${new Date(data["last_upload"]).toUTCString()}`,
                         color: function() { return getComputedStyle(document.body).getPropertyValue("--primary") },
                         position: "bottom",
                         align: "start",
