--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -65,7 +65,11 @@
 
 {{- /* bundle all required css */}}
 {{- /* Add extended css after theme style */ -}}
-{{- $stylesheet := (slice $license_css $core $extended) | resources.Concat "assets/css/stylesheet.css" | postCSS }}
+{{- $bundle := (slice $license_css $core $extended) | resources.Concat "assets/css/bundle.css" | css.PostCSS }}
+
+{{- /* Add TailwindCSS */}}
+{{- $tailwind := (slice (resources.Get "css/tailwind.css")) | resources.Concat "assets/css/tailwind.css" | css.TailwindCSS (dict "minify" true) }}
+{{- $stylesheet := (slice $tailwind $bundle) | resources.Concat "assets/css/stylesheet.css" }}
 
 {{- if not site.Params.assets.disableFingerprinting }}
 {{- $stylesheet := $stylesheet | fingerprint }}
