--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,5 @@
 @layer theme, base, components, utilities;
 @import "tailwindcss/theme" layer(theme);
 @import "tailwindcss/utilities" layer(utilities);
+
+@variant dark (&:where(.dark, .dark *));
