--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -14,22 +14,11 @@
     if ("serviceWorker" in navigator) {
         navigator.serviceWorker.register("{{ $sw.RelPermalink }}", {
             updateViaCache: "none"
-        }).catch(function(err) {
-            return console.error(err);
+        }).catch(function(e) {
+            return console.error(e.message);
         });
     }
 </script>
-{{- if .IsHome }}
-<script>
-    var email = document.querySelector('a[title^="Email"]');
-    if (email) {
-        email.addEventListener("click", function(e) {
-            e.preventDefault();
-            window.location.href = atob("bWFpbHRvOnNlY3VyaXR5QGRodHpzLmRldj9zdWJqZWN0PVNlY3VyaXR5JTIwaW5xdWlyeTolMjAlNUJCcmllZiUyMGRlc2NyaXB0aW9uJTVE");
-        });
-    }
-</script>
-{{- end }}
 {{- if and (in site.Params.mainSections .Section) (not .IsPage) }}
 <script>
     if ("serviceWorker" in navigator && "caches" in window) {
@@ -57,7 +46,7 @@
                 }
             }
         }
-        xhr.open("GET", window.location.href + "?v=" + Date.now(), true);
+        xhr.open("GET", window.location.href + "?t=" + Date.now(), true);
         xhr.send();
     }
 </script>
