--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,9 @@
 {{- if not (.Param "hideFooter") }}
 <footer class="footer">
     {{- if not site.Params.footer.hideCopyright }}
-    <p>Copyright &copy; {{ now.Year }} | All rights reserved</p>
+    <p>&copy; {{ now.Year }} | CC BY-SA 4.0</p>
     {{- end }}
-    <p><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="16 18 22 12 16 6"/><polyline points="8 6 2 12 8 18"/></svg> with <svg stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg> and <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none"><path d="M18 8h1a4 4 0 0 1 0 8h-1"></path><path d="M2 8h16v9a4 4 0 0 1-4 4H6a4 4 0 0 1-4-4V8z"></path><line x1="6" y1="1" x2="6" y2="4"></line><line x1="10" y1="1" x2="10" y2="4"></line><line x1="14" y1="1" x2="14" y2="4"></line></svg> by Dimitris Chatzis</p>
+    <a href="https://github.com/dhtzs/dhtzs.dev" target="_blank" rel="noopener noreferrer me" title="View source"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="16 18 22 12 16 6"/><polyline points="8 6 2 12 8 18"/></svg> with <svg stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg> and <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none"><path d="M18 8h1a4 4 0 0 1 0 8h-1"></path><path d="M2 8h16v9a4 4 0 0 1-4 4H6a4 4 0 0 1-4-4V8z"></path><line x1="6" y1="1" x2="6" y2="4"></line><line x1="10" y1="1" x2="10" y2="4"></line><line x1="14" y1="1" x2="14" y2="4"></line></svg> by Dimitris Chatzis</a>
 </footer>
 {{- end }}
 
@@ -18,7 +18,7 @@
 {{- partial "extend_footer.html" . }}
 
 <script>
-    var menu = document.getElementById("menu")
+    var menu = document.getElementById("menu");
     if (menu) {
         menu.scrollLeft = localStorage.getItem("menu-scroll-position");
         menu.addEventListener("scroll", function() {
@@ -71,8 +71,8 @@
             document.body.classList.add("dark");
             localStorage.setItem("pref-theme", "dark");
         }
-        if (activityChart !== undefined) {
-            activityChart.update();
+        if (window.interactionsChart !== undefined) {
+            window.interactionsChart.update();
         }
     });
 </script>
@@ -94,7 +94,7 @@
             }, 2000);
         }
 
-        copybutton.addEventListener("click", function(cb) {
+        copybutton.addEventListener("click", function() {
             if ("clipboard" in navigator) {
                 navigator.clipboard.writeText(codeblock.textContent);
                 copyingDone();
@@ -109,7 +109,9 @@
             try {
                 document.execCommand("copy");
                 copyingDone();
-            } catch (e) { };
+            } catch(e) {
+                console.error(e.message);
+            }
             selection.removeRange(range);
         });
 
