--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -18,7 +18,7 @@ header nav div.logo>a:after {
     content: "";
     position: relative;
     display: inline-block;
-    background-color: var(--primary);
+    background: var(--primary);
     vertical-align: middle;
     border-radius: 1px;
     width: 2px;
@@ -26,7 +26,6 @@ header nav div.logo>a:after {
     bottom: 2.5px;
     margin-left: 2.5px;
     opacity: 0;
-    -webkit-animation: blink 1.06s linear infinite;
     animation: blink 1.06s linear infinite;
 }
 
@@ -44,18 +43,6 @@ header nav div.logo>a:after {
     outline: 0;
 }
 
-@-webkit-keyframes blink {
-    0% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-    }
-}
-
 @keyframes blink {
     0% {
         opacity: 0;
@@ -68,16 +55,14 @@ header nav div.logo>a:after {
     }
 }
 
-canvas#activity-chart {
-    width: 100%;
-    height: 360px;
+.footer a {
+    border-bottom: 1px dotted var(--secondary);
 }
 
 .footer svg, .post-controls svg {
     vertical-align: sub;
     width: 14px;
     height: 100%;
-    margin: auto 1px;
 }
 
 .post-controls, #control-offlineAccess {
@@ -89,4 +74,180 @@ canvas#activity-chart {
 
 #control-offlineAccess:hover {
     cursor: pointer;
+}
+
+.dark .insights-widget-container {
+    background: var(--entry);
+}
+
+.insights-widget-container {
+    display: inline-flex;
+    width: 100%;
+    padding: 0.4em;
+    margin-bottom: var(--content-gap);
+    background: var(--code-bg);
+    border: 1px solid var(--border);
+    border-radius: var(--radius);
+}
+
+.insights-widget-icon {
+    display: grid;
+    min-width: 64px;
+    min-height: 64px;
+    align-content: center;
+    background: var(--code-bg);
+    box-shadow: inset 0px 0px 0px 1px var(--border);
+    border-radius: var(--radius);
+}
+
+.insights-widget-icon svg, .insights-widget-icon img {
+    width: 64px;
+    height: auto;
+    margin: 0;
+    border-radius: var(--radius);
+}
+
+.insights-widget-icon svg {
+    display: block;
+    padding: 0.4em;
+}
+
+.insights-widget-icon img {
+    display: none;
+}
+
+.insights-widget-icon a svg:hover, .insights-widget-icon img:hover {
+    filter: opacity(0.75);
+}
+
+.insights-widget-content {
+    display: grid;
+    width: 100%;
+    align-content: center;
+    margin: 0 0 0 0.4em;
+}
+
+.insights-widget-content a, .insights-widget-content p {
+    min-width: 0;
+    color: var(--primary);
+    -webkit-user-select: none;
+    user-select: none;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.insights-widget-content a, .insights-widget-icon a {
+    box-shadow: none;
+    pointer-events: none;
+}
+
+.insights-widget-content a:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.insights-widget-content p {
+    margin: 0;
+}
+
+.interactions-chart {
+    width: 100%;
+    height: 360px;
+}
+
+form input, form textarea, form button {
+    width: 100%;
+    padding: 4px 10px;
+    margin-bottom: var(--content-gap);
+    color: var(--primary);
+    border: 2px solid var(--tertiary);
+    border-radius: var(--radius);
+}
+
+form input:disabled, form textarea:disabled, form button:disabled {
+    pointer-events: none;
+}
+
+form textarea {
+    resize: none;
+}
+
+form input:focus, form textarea:focus {
+    border-color: var(--secondary);
+}
+
+form input:user-valid, form textarea:user-valid {
+    border-color: #16a34a;
+}
+
+form input:user-invalid, form textarea:user-invalid {
+    border-color: #dc2626;
+}
+
+form input::placeholder, form textarea::placeholder {
+    font-weight: bold;
+}
+
+form button {
+    background: var(--primary);
+    color: var(--code-bg);
+}
+
+.dark form button {
+    color: var(--theme);
+}
+
+form button:hover {
+    background: var(--code-bg);
+    color: var(--primary);
+    transition: background 0.5s, color 0.5s;
+}
+
+.dark form button:hover {
+    background: var(--theme);
+}
+
+form button.success {
+    background: #16a34a;
+    color: var(--code-bg);
+}
+
+.dark form button.success {
+    color: var(--primary);
+}
+
+form button.error {
+    background: #dc2626;
+    color: var(--code-bg);
+}
+
+.dark form button.error {
+    color: var(--primary);
+}
+
+form button svg {
+    width: 16px;
+    height: auto;
+    vertical-align: middle;
+}
+
+.post-content form textarea::-webkit-scrollbar-thumb {
+    background: var(--tertiary);
+    border: 5px solid var(--entry);
+}
+
+.post-content form textarea::-webkit-scrollbar-thumb:hover {
+    background: var(--secondary);
+}
+
+form label {
+    display: flex;
+    align-items: center;
+}
+
+form label svg {
+    width: 16px;
+    height: auto;
+    margin: 0 0.4em 0 0;
 }
