--- a/layouts/shortcodes/activityInteractions.html
+++ b/layouts/shortcodes/activityInteractions.html
@@ -1,9 +1,9 @@
-<div><canvas id="activity-chart"></canvas></div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<div><canvas class="interactions-chart"></canvas></div>
 <script>
-    var activityChart;
-    fetch("https://dhtzs.dev/api/activity").then(function(res) {
-        return res.json()
+    var interactionsChart;
+    fetch("https://dhtzs.dev/api/activity?type=interactions").then(function(res) {
+        return res.json();
     }).then(function(data) {
         var datasets = [
             { label: "Left clicks", data: data["left_clicks"] },
@@ -16,15 +16,15 @@
 
         Chart.defaults.font.family = getComputedStyle(document.body).getPropertyValue("font-family");
 
-        activityChart = new Chart(document.getElementById("activity-chart").getContext("2d"), {
+        interactionsChart = new Chart(document.getElementsByClassName("interactions-chart")[0].getContext("2d"), {
             type: "line",
             data: {
                 labels: (function() {
-                    var timeLabels = [];
-                    var ampm = ["AM", "PM"];
+                    var timeLabels = [],
+                        ampm = ["AM", "PM"];
                     for (var i = 0; i < 24; i++) {
-                        var hour = i % 12;
-                        var period = ampm[Math.floor(i / 12)];
+                        var hour = i % 12,
+                            period = ampm[Math.floor(i / 12)];
                         timeLabels.push(`${hour < 10 ? "0" : ""}${hour}:00 ${period}`);
                         timeLabels.push(`${hour < 10 ? "0" : ""}${hour}:30 ${period}`);
                     }
@@ -39,7 +39,7 @@
                         tension: 0.1,
                         borderWidth: 2
                     }
-                }),
+                })
             },
             options: {
                 responsive: true,
@@ -47,8 +47,8 @@
                 plugins: {
                     title: {
                         display: true,
-                        text: `Last update: ${new Date(data["last_upload"]).toUTCString()}`,
-                        color: function() { return getComputedStyle(document.body).getPropertyValue("--primary") },
+                        text: `Last update: ${new Date(new Date(data["last_upload"]).getTime() + 30 * 60 * 1000).toUTCString()}`,
+                        color: function() { return getComputedStyle(document.body).getPropertyValue("--primary"); },
                         position: "bottom",
                         align: "start",
                         font: {
@@ -59,7 +59,7 @@
                         display: true,
                         position: "bottom",
                         labels: {
-                            color: function() { return getComputedStyle(document.body).getPropertyValue("--primary") }
+                            color: function() { return getComputedStyle(document.body).getPropertyValue("--primary"); }
                         }
                     },
                     tooltip: {
@@ -80,11 +80,11 @@
                     x: {
                         ticks: {
                             maxTicksLimit: 9,
-                            color: function() { return getComputedStyle(document.body).getPropertyValue("--primary") }
+                            color: function() { return getComputedStyle(document.body).getPropertyValue("--primary"); }
                         },
                         grid: {
                             drawOnChartArea: true,
-                            color: function() { return getComputedStyle(document.body).getPropertyValue("--border") }
+                            color: function() { return getComputedStyle(document.body).getPropertyValue("--border"); }
                         }
                     },
                     y: {
@@ -100,11 +100,11 @@
                                         return (value / ranges[i].divider).toString() + ranges[i].suffix;
                                 return value.toString();
                             },
-                            color: function() { return getComputedStyle(document.body).getPropertyValue("--primary") }
+                            color: function() { return getComputedStyle(document.body).getPropertyValue("--primary"); }
                         },
                         grid: {
                             drawOnChartArea: true,
-                            color: function() { return getComputedStyle(document.body).getPropertyValue("--border") }
+                            color: function() { return getComputedStyle(document.body).getPropertyValue("--border"); }
                         }
                     },
                 },
